@@ -1,22 +1,23 @@
 package com.codesquad_team01.issue_tracker.issue.service;
 
 import com.codesquad_team01.issue_tracker.issue.domain.Issue;
-import com.codesquad_team01.issue_tracker.issue.dto.response.*;
+import com.codesquad_team01.issue_tracker.issue.dto.response.IssueListResponse;
+import com.codesquad_team01.issue_tracker.issue.dto.response.IssueResponse;
 import com.codesquad_team01.issue_tracker.issue.repository.IssueRepository;
 import com.codesquad_team01.issue_tracker.label.dto.response.LabelResponse;
 import com.codesquad_team01.issue_tracker.label.repository.LabelRepository;
-import com.codesquad_team01.issue_tracker.member.domain.Member;
 import com.codesquad_team01.issue_tracker.member.dto.response.AuthorResponse;
 import com.codesquad_team01.issue_tracker.member.repository.MemberRepository;
-import com.codesquad_team01.issue_tracker.milestone.domain.Milestone;
 import com.codesquad_team01.issue_tracker.milestone.dto.response.MilestoneResponse;
 import com.codesquad_team01.issue_tracker.milestone.repository.MilestoneRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class IssueService {
 
     private final IssueRepository issueRepository;
@@ -24,70 +25,64 @@ public class IssueService {
     private final MemberRepository memberRepository;
     private final MilestoneRepository milestoneRepository;
 
-    public IssueService(IssueRepository issueRepository, LabelRepository labelRepository,
-                        MemberRepository memberRepository, MilestoneRepository milestoneRepository ) {
-        this.issueRepository = issueRepository;
-        this.labelRepository = labelRepository;
-        this.memberRepository = memberRepository;
-        this.milestoneRepository = milestoneRepository;
-    }
-
+    @Transactional(readOnly = true)
     public IssueListResponse getIssueList(boolean isOpened) {
 
-        List<Issue> issueList = issueRepository.findAllByIsOpened(isOpened);
+        long openIssueCount = issueRepository.countByIsOpenedAndDeletedAtIsNull(true);
+        long closedIssueCount = issueRepository.countByIsOpenedAndDeletedAtIsNull(false);
+        long labelCount = labelRepository.countByDeletedAtIsNull();
+        long milestoneCount = milestoneRepository.countByDeletedAtIsNull();
 
-        if (issueList.isEmpty()) {
-            return new IssueListResponse(createMetadata(), Collections.emptyList());
+        IssueListResponse.Metadata metadata = new IssueListResponse.Metadata(
+                openIssueCount, closedIssueCount, labelCount, milestoneCount
+        );
+
+        List<Issue> issues = issueRepository.findList(isOpened);
+        if (issues.isEmpty()) {
+            return new IssueListResponse(metadata, List.of());
         }
 
-        List<Long> authorIds = issueList.stream().map(Issue::authorId).distinct().toList();
-        List<Long> milestoneIds = issueList.stream().map(Issue::milestoneId).filter(Objects::nonNull).distinct().toList();
-        List<Long> issueIds = issueList.stream().map(Issue::id).toList();
+        List<Long> issueIds = new ArrayList<>();
+        List<Long> authorIds = new ArrayList<>();
+        List<Long> milestoneIds = new ArrayList<>();
 
-        Map<Long, AuthorResponse> authorMap = memberRepository.findAllById(authorIds).stream()
-                .collect(Collectors.toMap(Member::getId, m -> new AuthorResponse(m.getId(), m.getName())));
+        for (Issue issue : issues) {
+            issueIds.add(issue.getId());
+            authorIds.add(issue.getAuthorId());
+            if (issue.getMilestoneId() != null) {
+                milestoneIds.add(issue.getMilestoneId());
+            }
+        }
 
-        Map<Long, MilestoneResponse> milestoneMap = milestoneRepository.findAllById(milestoneIds).stream()
-                .collect(Collectors.toMap(Milestone::getId, m -> new MilestoneResponse(m.getId(), m.getName())));
-
-        Map<Long, List<LabelResponse>> labelsMap = labelRepository.findAllByIssueIdIn(issueIds).stream()
-                .collect(Collectors.groupingBy(
-                        LabelRepository.LabelWithIssueId::issueId,
-                        Collectors.mapping(l -> new LabelResponse(l.id(), l.name(), l.backgroundColor(), l.textColor()), Collectors.toList())
-                ));
-        List<IssueResponse> issues = issueList.stream()
-                .map(issue -> {
-                    AuthorResponse author = authorMap.getOrDefault(issue.authorId(),
-                            new AuthorResponse(null, "알 수 없는 사용자"));
-                    MilestoneResponse milestone = (issue.milestoneId() != null) ?
-                            milestoneMap.get(issue.milestoneId()) : null;
-                    List<LabelResponse> labels = labelsMap.getOrDefault(issue.id(), Collections.emptyList());
-                    return convertToIssueResponse(issue, author, labels, milestone);
-                })
-                .toList();
-
-        return new IssueListResponse(createMetadata(), issues);
-    }
-
-    private IssueListResponse.Metadata createMetadata() {
-        return new IssueListResponse.Metadata(
-                issueRepository.countByIsOpenedAndDeletedAtIsNull(true),
-                issueRepository.countByIsOpenedAndDeletedAtIsNull(false),
-                labelRepository.countByDeletedAtIsNull(),
-                milestoneRepository.countByDeletedAtIsNull()
+        Map<Long, AuthorResponse> authorMap = new HashMap<>();
+        memberRepository.findAllById(authorIds).forEach(m ->
+                authorMap.put(m.getId(), new AuthorResponse(m.getId(), m.getName()))
         );
-    }
 
-    private IssueResponse convertToIssueResponse(Issue issue, AuthorResponse author,
-                                                 List<LabelResponse> labels, MilestoneResponse milestone) {
-        return new IssueResponse(
-                issue.id(),
-                issue.title(),
-                author,
-                labels,
-                milestone,
-                issue.isOpened(),
-                issue.createdAt()
+        Map<Long, MilestoneResponse> milestoneMap = new HashMap<>();
+        milestoneRepository.findAllById(milestoneIds).forEach(ms ->
+                milestoneMap.put(ms.getId(), new MilestoneResponse(ms.getId(), ms.getName()))
         );
+
+        Map<Long, List<LabelResponse>> labelMap = new HashMap<>();
+        for (LabelRepository.LabelWithIssueId row : labelRepository.findAllByIssueIdIn(issueIds)) {
+            labelMap.computeIfAbsent(row.issueId(), k -> new ArrayList<>())
+                    .add(new LabelResponse(row.id(), row.name(), row.backgroundColor(), row.textColor()));
+        }
+
+        List<IssueResponse> issueResponses = new ArrayList<>();
+        for (Issue issue : issues) {
+            issueResponses.add(new IssueResponse(
+                    issue.getId(),
+                    issue.getTitle(),
+                    authorMap.get(issue.getAuthorId()),
+                    labelMap.getOrDefault(issue.getId(), List.of()),
+                    milestoneMap.get(issue.getMilestoneId()),
+                    issue.isOpened(),
+                    issue.getCreatedAt()
+            ));
+        }
+
+        return new IssueListResponse(metadata, issueResponses);
     }
 }
